--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body{
 }
 h3{
     color:aliceblue;
+    text-align: center;
+    text-overflow: ellipsis;
+    /* width: 100%; */
+    overflow: hidden;
+    white-space: nowrap;
 
 }
 .topnav{
@@ -49,17 +54,27 @@ input{
 .thumbnail{
     height: 350px;
     width: 300px;
-    border-radius:19px ;
+    border-radius:19px ;  
+    padding: 10px;  
 }
-.column{
-    float: left;
-    width: 45%;
+
+.column {
+    width: 25%;  
+    box-sizing: border-box;   
     padding: 10px;
+    float : left; 
+
 }
 
 .card{
     border-radius: 19px;
-    padding: 10px;
-    text-align: center;
+    padding: 15px;
+    text-align:center;
     background-color:#151f30;
+    height:auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+   
 }
